# src/modules/knowledge/dto/create-knowledge.dto.ts
@@ -1,0 +1,4 @@
+import { KnowledgeEntity } from "@/entities";
+import { PickType } from "@nestjs/swagger";
+
+export class CreateKnowledgeDto extends PickType(KnowledgeEntity, ["name", "namespace"]) {}
