# src/modules/knowledge/knowledge.controller.ts
@@ -3,9 +3,13 @@ import { BaseController } from "@/shared/controller";
 import { Controller } from "@/shared/controller/decorators";
 
 import { KnowledgeService } from "./knowledge.service";
+import { CreateKnowledgeDto } from "./dto/create-knowledge.dto";
 
 @Controller("knowledge")
-export class KnowledgeController extends BaseController({ entity: KnowledgeEntity }) {
+export class KnowledgeController extends BaseController({
+  entity: KnowledgeEntity,
+  createDto: CreateKnowledgeDto
+}) {
   constructor(service: KnowledgeService) {
     super(service);
   }
