# src/modules/session/dto/send-message.dto.ts
@@ -1,0 +1,11 @@
+import { FromParams } from "@/shared/controller/decorators";
+import { Field } from "@/shared/model";
+
+export class SendMessageDto {
+  @FromParams("id")
+  @Field({ type: "string", required: true, uuid: true, description: "The session id" })
+  sessionId: string;
+
+  @Field({ type: "string", required: true, description: "The message to send" })
+  message: string;
+}
